--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - main
-  tags:
-    - 'v*'  # This assumes your tag names follow the format v1.0, v1.1, etc.
-
+  create:
+    tags:
+      - 'v*'
 jobs:
   build-and-release:
     runs-on: windows-latest
@@ -26,25 +26,20 @@ jobs:
         pip install pyinstaller
 
     - name: Compile with PyInstaller
-      run: pyinstaller --onefile your_script.py  # Replace with your script's filename.
+      run: pyinstaller --ChedLog.py
 
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # This token is provided by Actions, no need to create your own
+      uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
-
-    - name: Upload EXE to Release
-      uses: actions/upload-release-asset@v1
+        files: dist/ChedLog.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload EXE to Release
+      uses: actions/upload-artifact@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}  # This pulls from the CREATE RELEASE step above, don't change
-        asset_path: ./dist/your_script.exe  # Replace with the path to your .exe file
-        asset_name: your_script.exe  # Replace with your desired asset name
-        asset_content_type: application/octet-stream
+        name: Executable
+        path: dist/*.exe
